src/gateway/manifests/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: default
spec:
  selector:
    app: gateway
  type: ClusterIP
  ports:
    - name: gateway
      protocol: TCP
      port: 8080
      targetPort: 8080
