src/gateway/manifests/gateway-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource
# https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/configmap
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"

spec:
  rules:
    - host: video-to-mp3.aksaman.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateay
                port:
                  number: 8080
